# batch_image_processing

./: Cargo.toml  README.md  todo.md
models/ppocrv5/: PP-LCNet_x0_25_textline_ori.onnx
src/: app.rs  main.rs
src/numbering_mode/: mod.rs  state.rs  ui.rs
src/ocr/: mod.rs
src/processing/: batch.rs  image_cache.rs  image_ops.rs  mod.rs  sort.rs
xtask/: Cargo.toml
xtask/src/: main.rs
