[package]
name = "batch_image_processing"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["image-without-codecs", "tokio"] }
image = { version = "0.25", default-features = false, features = ["rayon", "jpeg", "png"] }
imageproc = { version = "0.26", default-features = false, features = ["rayon", "text"] }
ab_glyph = "0.2"
rayon = "1"
rfd = "0.17"
pdf-writer = "0.14"
tokio = { version = "1", features = ["fs", "sync"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", version = "0.13", default-features = false, features = ["color_picker"] }
zune-jpeg = "0.5"
zune-imageprocs = "0.5"
memmap2 = "0.9"
zune-core = "0.5"
zune-image = { version = "0.5", default-features = false, features = ["simd", "threads", "jpeg"] }


[profile.dev]
debug = false
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
# opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
