[package]
name = "batch_image_processing"
version = "0.1.0"
edition = "2024"
default-run = "batch_image_processing"

[dependencies]
iced = { version = "0.14", features = ["image-without-codecs", "tokio"] }
image = { version = "0.25", default-features = false, features = ["rayon", "jpeg", "png"] }
imageproc = { version = "0.26", default-features = false, features = ["rayon", "text"] }
ab_glyph = "0.2"
rayon = "1"
# rfd = { version = "0.17", default-features = false, features = ["wayland", "gtk3"] } had to do this for rfd to work on hyprland
rfd = "0.17"
pdf-writer = "0.14"
tokio = { version = "1", features = ["fs", "sync"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", version = "0.13", default-features = false, features = ["color_picker"] }
turbojpeg = "1.4"
mimalloc = { version = "0.1", features = ["v3"] }

# benchmark-only dependencies (behind 'bench' feature)
zune-jpeg = { version = "0.5", optional = true }
zune-imageprocs = { version = "0.5", optional = true }
memmap2 = { version = "0.9", optional = true }
zune-core = { version = "0.5", optional = true }
zune-image = { version = "0.5", default-features = false, features = ["simd", "threads", "jpeg"], optional = true }
jpeg-encoder = { version = "0.7", optional = true }


[features]
bench = ["zune-jpeg", "zune-imageprocs", "memmap2", "zune-core", "zune-image", "jpeg-encoder"]

[[bin]]
name = "jpeg_bench"
path = "src/bin/jpeg_bench.rs"
required-features = ["bench"]



[profile.dev]
debug = false
strip = "debuginfo"

[profile.dev.build-override]
opt-level = 3


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
# opt-level = "z"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
